# forge

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml  dusk_ci.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  data_driver_wasm.rs  error.rs  main.rs  toolchain.rs  tools.rs  ui.rs
cli/src/build_runner/: mod.rs  wasm_opt.rs
cli/src/commands/: build.rs  call.rs  check.rs  clean.rs  completions.rs  expand.rs  mod.rs  new.rs  schema.rs  test.rs  verify.rs
cli/src/project/: detect.rs  metadata.rs  mod.rs
cli/src/template/: embedded.rs  engine.rs
cli/tests/: core_commands.rs  dx_commands.rs  new_command.rs
contract-macro/: Cargo.toml
contract-macro/src/: data_driver.rs  extract.rs  generate.rs  lib.rs  parse.rs  resolve.rs  validate.rs
contract-macro/src/parse/: directives.rs  events.rs  functions.rs  imports.rs  mod.rs  module.rs
contract-macro/tests/: compile_fail.rs
contract-macro/tests/common/: contract.rs
contract-macro/tests/compile-fail/: handler_static_lifetime_rejected.rs  handler_static_lifetime_rejected.stderr  handler_wrong_arg_count_decode_output.rs  handler_wrong_arg_count_decode_output.stderr  handler_wrong_arg_encode_input.rs  handler_wrong_arg_encode_input.stderr  handler_wrong_return_decode_input.rs  handler_wrong_return_decode_input.stderr  missing_feature_gate.rs  missing_feature_gate.stderr
contract-macro/tests/compile-fail-both-features/: Cargo.toml
contract-macro/tests/compile-fail-both-features/src/: lib.rs
contract-macro/tests/compile-pass-short-paths/: Cargo.toml
contract-macro/tests/compile-pass-short-paths/src/: lib.rs
contract-template/: Cargo.toml  Makefile
contract-template/src/: lib.rs
contract-template/tests/: contract.rs
docs/: design.md  future-type-introspection.md  poc.rs  test-improvement-tasks.md
src/: lib.rs  schema.rs
tests/: contract_macro.rs
tests/assets/: test_bridge_schema.json
tests/test-bridge/: Cargo.toml  Makefile
tests/test-bridge/src/: lib.rs
tests/test-bridge/tests/: contract.rs  schema.rs  test_session.rs
tests/test-bridge/tests/genesis-contracts/: stake_contract.wasm  transfer_contract.wasm
tests/test-contract/: Cargo.toml  Makefile
tests/test-contract/src/: lib.rs
tests/test-contract/tests/: contract.rs  schema.rs  test_session.rs
tests/types/: Cargo.toml
tests/types/src/: lib.rs
