[package]
name = "dusk-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
contract-macro = { path = "contract-macro" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
dusk-core = "1.4"
evm-core = { path = "../DuskEVM/L1Contracts/core" }

[workspace]
resolver = "2"
members = ["contract-macro", "tests/test-bridge"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Pin to match L1Contracts versions
dusk-vm = { version = "=1.4.0", default-features = false }
# Pin to avoid edition2024 issues with constant_time_eq
blake2b_simd = "=1.0.2"
blake3 = "=1.5.4"
constant_time_eq = "=0.3.1"

