[package]
name = "dusk-forge"
version = "0.2.1"
edition = "2021"
description = "A smart contract development framework for Dusk"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/forge"
keywords = ["dusk", "smart-contract", "blockchain", "proc-macro", "wasm"]
categories = ["development-tools"]

[dependencies]
dusk-forge-contract = { workspace = true }
serde = { version = "1", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
dusk-core = "1.4"

[workspace]
resolver = "2"
members = ["contract-macro", "tests/types", "tests/test-bridge"]
exclude = ["contract-template"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Workspace internal dependencies
dusk-forge-contract = { version = "0.1.0", path = "./contract-macro/" }
# dusk-forge-contract = { version = "0.2.0-alpha.1", path = "./contract-macro/" }

# Pin to match L1Contracts versions
dusk-vm = { version = "=1.4.0", default-features = false }
# Pin to avoid edition2024 issues
blake2b_simd = "=1.0.2"
blake3 = "=1.5.4"
constant_time_eq = "=0.3.1"
time-core = "=0.1.6"

# Enable overflow checks in release builds for contract safety
[profile.release]
overflow-checks = true
