[package]
name = "dusk-forge-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for scaffolding and building Dusk Forge contracts"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/forge"

[[bin]]
name = "dusk-forge"
path = "src/main.rs"

[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
