[package]
name = "dusk-forge-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for scaffolding and building Dusk Forge contracts"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/forge"

[[bin]]
name = "dusk-forge"
path = "src/main.rs"

[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
colored = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true, optional = true }

[features]
default = ["schema"]
schema = ["dep:wasmtime"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
