[package]
name = "dusk-forge-contract"
version = "0.1.1"
edition.workspace = true
description = "A smart contract development macro for Dusk"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = "1"
