# =============================================================================
# Dusk Contract Cargo.toml Template
# =============================================================================
# Copy this entire directory to create a new contract.
# Replace placeholders (YOUR_CONTRACT_NAME, etc.) with your actual values.
#
# DEPENDENCY SETUP:
# -----------------
# This contract has TWO build targets that share the same source file:
#
# 1. CONTRACT WASM (default) - Runs on-chain in the Dusk VM
#    - Built with: `make wasm`
#    - Uses `dusk-core/abi-dlmalloc` to have access to the abi host functions and
#      for the WASM allocator
#    - The entire crate is gated by `#![cfg(target_family = "wasm")]`
#
# 2. DATA-DRIVER WASM - Runs off-chain (browsers, wallets, explorers)
#    - Built with: `make wasm-dd`
#    - Provides JSON encoding/decoding for contract interactions
#    - Requires `dusk-core/serde` for JSON serialization of dusk-core types
#
# WHY WASM-ONLY DEPENDENCIES?
# ---------------------------
# All runtime deps are in `[target.'cfg(target_family = "wasm")'.dependencies]`
# because the contract is gated by `#![cfg(target_family = "wasm")]`. This means:
# - Dependencies are only compiled for WASM targets
# - Native builds (like `cargo test`) don't pull in WASM-only deps
#
# DEV-DEPENDENCIES:
# -----------------
# `[dev-dependencies]` are for tests that run on the HOST (not in WASM).
# Tests typically:
# - Compile the contract WASM
# - Deploy it to dusk-vm
# - Call contract functions and verify results
# So dev-deps need the same types (dusk-core) but without WASM-specific features.
#
# ADDING NEW DEPENDENCIES:
# ------------------------
# - Contract and data-driver deps: Add to wasm-only section
# - Contract-only deps: Add to wasm-only section with `optional = true`
# - Data-driver-only deps: Add to wasm-only section with `optional = true`,
#   then add `dep:your-dep` to the `data-driver` feature
# - If a dep has types used in function signatures that need JSON serialization,
#   enable its `serde` feature in the `data-driver` feature list
# =============================================================================

[package]
name = "YOUR_CONTRACT_NAME"
version = "0.1.0"
edition = "2021"

# -----------------------------------------------------------------------------
# WASM Dependencies (contract is gated by #![cfg(target_family = "wasm")])
# -----------------------------------------------------------------------------
[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = "1.4"
dusk-data-driver = { version = "0.3", optional = true }
dusk-wasm = "0.1"

# -----------------------------------------------------------------------------
# Dev Dependencies (for tests running on the host, not in WASM)
# -----------------------------------------------------------------------------
[dev-dependencies]
dusk-core = "1.4"
dusk-vm = "0.1"

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
# Contract WASM build (on-chain execution)
# - abi-dlmalloc: Custom allocator for WASM environment
default = ["dusk-core/abi-dlmalloc"]

# Data-driver WASM build (off-chain JSON encoding/decoding)
# - dusk-core/serde: Enables Serialize/Deserialize for dusk-core types
# - If you add deps with types in function signatures, add their /serde features here
data-driver = [
  "dusk-core/serde",
  "dep:dusk-data-driver",
  "dusk-data-driver/wasm-export",
]

# Data-driver with memory allocator exports for JavaScript environments
data-driver-js = ["data-driver", "dusk-data-driver/alloc"]

[lib]
crate-type = ["cdylib"]

# Enable overflow checks in release builds for safety
[profile.release]
overflow-checks = true
