# =============================================================================
# Dusk Contract Cargo.toml Template
# =============================================================================
# Copy this entire directory to create a new contract.
# Replace placeholders (YOUR_CONTRACT_NAME, etc.) with your actual values.
#
# BUILD TARGETS:
# --------------
# This contract has TWO build targets that share the same source file:
#
# 1. CONTRACT WASM - Runs on-chain in the Dusk VM
#    - Built with: `make wasm` (uses `--features contract`)
#    - Uses `dusk-core/abi-dlmalloc` for the WASM allocator
#
# 2. DATA-DRIVER WASM - Runs off-chain (browsers, wallets, explorers)
#    - Built with: `make wasm-dd` (uses `--features data-driver-js`)
#    - Provides JSON encoding/decoding for contract interactions
#
# The `contract` and `data-driver` features are MUTUALLY EXCLUSIVE.
# The Makefile selects one feature per build. With no default feature,
# `cargo test` runs on native without pulling in WASM-only dependencies.
#
# DEPENDENCIES:
# -------------
# All runtime deps are in `[target.'cfg(target_family = "wasm")'.dependencies]`
# because the contract is gated by `#![cfg(target_family = "wasm")]`.
#
# Dev-deps are for tests that run on the HOST (not in WASM).
#
# ADDING NEW DEPENDENCIES:
# ------------------------
# - Both builds: Add to wasm-only section
# - Contract-only: Add with `optional = true`, then add to `contract` feature
# - Data-driver-only: Add with `optional = true`, then add to `data-driver` feature
# - Types needing JSON: Enable their `serde` feature in `data-driver`
# =============================================================================

[package]
name = "YOUR_CONTRACT_NAME"
version = "0.1.0"
edition = "2021"

# -----------------------------------------------------------------------------
# WASM Dependencies (contract is gated by #![cfg(target_family = "wasm")])
# -----------------------------------------------------------------------------
[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = "1.4"
dusk-data-driver = { version = "0.3", optional = true }
dusk-forge = "0.1"

# -----------------------------------------------------------------------------
# Dev Dependencies (for tests running on the host, not in WASM)
# -----------------------------------------------------------------------------
[dev-dependencies]
dusk-core = "1.4"
dusk-vm = "0.1"

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
# Contract WASM build (on-chain execution)
contract = ["dusk-core/abi-dlmalloc"]

# Data-driver WASM build (off-chain JSON encoding/decoding)
data-driver = [
  "dusk-core/serde",
  "dep:dusk-data-driver",
  "dusk-data-driver/wasm-export",
]

# Data-driver with memory allocator exports for JavaScript environments
data-driver-js = ["data-driver", "dusk-data-driver/alloc"]

[lib]
crate-type = ["cdylib"]

# Enable overflow checks in release builds for safety
[profile.release]
overflow-checks = true
