[package]
name = "test-bridge"
version = "0.1.0"
edition.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = "1.4"
dusk-data-driver = { version = "0.3", optional = true }
dusk-forge = { path = "../.." }
types = { path = "../types" }
serde_json = { version = "1", default-features = false, features = [
  "alloc",
], optional = true }

[dev-dependencies]
dusk-core = "1.4"
dusk-vm = { workspace = true, default-features = false }
types = { path = "../types" }
ff = { version = "0.13", default-features = false }
rand = "0.8"
rkyv = { version = "0.7", default-features = false, features = [
  "alloc",
  "size_32",
  "validation",
] }
rusk-prover = "1.3"
serde_json = "1"
wasmtime = "25"
# Pin to avoid edition2024 issues (resolved via workspace)
blake2b_simd = { workspace = true }
blake3 = { workspace = true }
constant_time_eq = { workspace = true }
time-core = { workspace = true }

[features]
# Contract WASM build
contract = ["dusk-core/abi-dlmalloc", "types/abi"]
# Data-driver WASM build
data-driver = [
  "dep:dusk-data-driver",
  "dusk-data-driver/wasm-export",
  "types/serde",
  "dusk-core/serde",
  "dep:serde_json",
]
# Data-driver with alloc exports for JavaScript environments
data-driver-js = ["data-driver", "dusk-data-driver/alloc"]

[lib]
crate-type = ["cdylib"]
