[package]
name = "test-contract"
version = "0.1.0"
edition.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { workspace = true }
dusk-data-driver = { version = "0.3", optional = true }
dusk-forge = { path = "../.." }
types = { path = "../types" }

[dev-dependencies]
dusk-core = { workspace = true }
dusk-vm = { workspace = true, default-features = false }
types = { path = "../types" }
ff = { version = "0.13", default-features = false }
rand = "0.8"
rkyv = { workspace = true, features = ["validation"] }
rusk-prover = { version = "1.6", git = "https://github.com/dusk-network/rusk", tag = "dusk-core-1.6.0" }
serde_json = { workspace = true, default-features = true }
wasmtime = "25"

[features]
# Contract WASM build
contract = ["dusk-core/abi-dlmalloc", "types/abi"]
# Data-driver WASM build
data-driver = [
  "dep:dusk-data-driver",
  "dusk-data-driver/wasm-export",
  "types/serde",
  "dusk-core/serde",
]
# Data-driver with alloc exports for JavaScript environments
data-driver-js = ["data-driver", "dusk-data-driver/alloc"]

[lib]
crate-type = ["cdylib"]
