[package]
name = "short-paths-compile-pass"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[features]
default = ["data-driver"]
contract = []
data-driver = ["dep:dusk-data-driver"]

[dependencies]
dusk-forge = { path = "../../.." }
dusk-data-driver = { version = "0.3", optional = true }

[lib]
path = "src/lib.rs"
